--- a/src/app/pages/private/listempresasdctf/listempresasdctf.component.html
+++ b/src/app/pages/private/listempresasdctf/listempresasdctf.component.html
@@ -65,33 +65,33 @@ id="excel-table" #dt (onLazyLoad)="loadPage($event, dt)" [paginator]="true" [row
 
     </ng-template>
     <ng-template pTemplate="body" let-item let-expanded="expanded">
-        <tr>
-            <td>{{item.id_dominio}} {{item.id_empresa}}</td>
-            <td>{{item.nome_emp}}</td> 
+        <tr> 
+            <td>{{item.id_dominio}}</td>
+            <td>{{item.nome_emp}}</td>
             <td>{{item.cnpj}}</td>
             <td>{{item.regime_tributacao}}</td>
             <td>{{item.prioridade}}</td>
-            <td *ngIf="setoresVisibilidadeValues['declaracoes-rh'] == true" ><p-checkbox [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.sem_folha"></p-checkbox></td>
-            <td *ngIf="setoresVisibilidadeValues['declaracoes-rh'] == true" ><p-checkbox [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.departamento_pessoal"></p-checkbox></td>
-            <td *ngIf="setoresVisibilidadeValues['rh'] == true"><p-checkbox [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.esocial_check"></p-checkbox></td>
-            <td *ngIf="setoresVisibilidadeValues['rh'] == true"><p-checkbox [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.esocial_ret"></p-checkbox></td>
-            <td *ngIf="setoresVisibilidadeValues['fiscal-retencao'] == true"><p-checkbox [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.efd_check"></p-checkbox></td>
-            <td *ngIf="setoresVisibilidadeValues['fiscal-retencao'] == true"><p-checkbox [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.efd_check"></p-checkbox></td>
-            <td *ngIf="setoresVisibilidadeValues['fiscal-retencao'] == true"><p-checkbox [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.efd_ret"></p-checkbox></td>
-            <td *ngIf="setoresVisibilidadeValues['fiscal-retencao'] == true"><p-checkbox [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.efd_desobrigar"></p-checkbox></td>
-            <td *ngIf="setoresVisibilidadeValues['rh'] == true"><p-checkbox [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.conferencia_check"></p-checkbox></td>
-            <td *ngIf="setoresVisibilidadeValues['declaracoes'] == true"><p-checkbox [binary]="true"  [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.dctf_check"></p-checkbox></td>
-            <td *ngIf="setoresVisibilidadeValues['declaracoes'] == true"><p-checkbox [binary]="true"  [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.dctf_ret"></p-checkbox></td>
-            <td *ngIf="setoresVisibilidadeValues['declaracoes'] == true"><p-checkbox [binary]="true"  [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.dctf_desobrigada"></p-checkbox></td>
-            <td *ngIf="setoresVisibilidadeValues['rh-controller'] == true"><p-checkbox [binary]="true"  [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.darf_check"></p-checkbox></td>
-            <td *ngIf="setoresVisibilidadeValues['rh-controller'] == true"><p-checkbox [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.darf_comp_check"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['declaracoes-rh'] == true" ><p-checkbox (onChange)="setSemfolha(item)" [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.sem_folha"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['declaracoes-rh'] == true" ><p-checkbox (onChange)="setDeparamentoPessoal(item)" [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.esocial_rh_interno"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['rh'] == true"><p-checkbox [binary]="true" (onChange)="setCheckEsocial(item)" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.esocial_check"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['rh'] == true"><p-checkbox [binary]="true" (onChange)="setSemfolha(item)" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.esocial_ret"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['fiscal-retencao'] == true"><p-checkbox (onChange)="setSemfolha(item)" [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.efd_check"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['fiscal-retencao'] == true"><p-checkbox (onChange)="setSemfolha(item)" [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.efd_check"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['fiscal-retencao'] == true"><p-checkbox (onChange)="setSemfolha(item)" [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.efd_ret"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['fiscal-retencao'] == true"><p-checkbox (onChange)="setSemfolha(item)" [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.efd_desobrigar"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['rh'] == true"><p-checkbox [binary]="true" (onChange)="setSemfolha(item)" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.conferencia_check"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['declaracoes'] == true"><p-checkbox  (onChange)="setSemfolha(item)" [binary]="true"  [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.dctf_check"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['declaracoes'] == true"><p-checkbox (onChange)="setSemfolha(item)" [binary]="true"  [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.dctf_ret"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['declaracoes'] == true"><p-checkbox (onChange)="setSemfolha(item)" [binary]="true"  [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.dctf_desobrigada"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['rh-controller'] == true"><p-checkbox (onChange)="setSemfolha(item)" [binary]="true"  [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.darf_check"></p-checkbox></td>
+            <td *ngIf="setoresVisibilidadeValues['rh-controller'] == true"><p-checkbox  (onChange)="setSemfolha(item)" [binary]="true" [style]="{'text-align': 'center','align-content': 'center'}" [(ngModel)]="item.darf_comp_check"></p-checkbox></td>
             <td>
                 <button type="button" pButton pRipple
-                icon="pi pi-pencil" class="mr-2" pTooltip="CSV" (click)="showModalEdit(item)" tooltipPosition="bottom"></button> 
+                icon="pi pi-pencil" class="mr-2" pTooltip="Editar DCTF WEB" (click)="showModalEdit(item)" tooltipPosition="bottom"></button> 
                 <button type="button" pButton pRipple
-                icon="pi pi-envelope" class="mr-2" pTooltip="CSV" tooltipPosition="bottom"></button> 
+                icon="pi pi-envelope" class="mr-2" pTooltip="Emails da Empresa" (click)="showModalEmailsEmpresa(item)" tooltipPosition="bottom"></button> 
                 <button type="button" pButton pRipple
-                icon="pi pi-trash" (click)="deleteEmpresaDctf(item)" class="mr-2" pTooltip="CSV" tooltipPosition="bottom"></button> 
+                icon="pi pi-trash" (click)="deleteEmpresaDctf(item)" class="mr-2" pTooltip="Excluir DCTF" tooltipPosition="bottom"></button> 
             </td>
         </tr>
     </ng-template>
@@ -101,7 +101,7 @@ id="excel-table" #dt (onLazyLoad)="loadPage($event, dt)" [paginator]="true" [row
 
 <app-modais-listagem-empresas
   [displaymodalEdicaoEmpresaDctf]="displaymodalEdicaoEmpresaDctf"
-  [displaymodalEdicaoEmpresaDctf]="displaymodalEdicaoEmpresaDctf"
+  [displaymodalEmailsEmpresas]="displaydModalEmailEmpresas"
   (closedModalEditDctf)="closedModalEditDctf()"
   (closedModalEmailEmpresas)="closedModalEmailEmpresas()"
   [payloadModalEditEmpresaDctf]="payloadModalEditEmpresaDctf"
