--- a/src/app/components/modais-listagem-empresas/modais-listagem-empresas.html
+++ b/src/app/components/modais-listagem-empresas/modais-listagem-empresas.html
@@ -119,31 +119,40 @@
   <p-dialog [modal]="true" [style]="{width: '50vw'}" [maximizable]="true" (onHide)="emitCloseModalEmailEmpresas()"
   [baseZIndex]="10000" header="Emails da Empresa - DCTF-WEB" [(visible)]="displaymodalEmailsEmpresas"
   [style]="{width: '50vw'}" [baseZIndex]="10000">
-
-
-   <form>
-    <div style="margin-top: 10px;" class="row">
-      <div class="col">
-        <label>
-          Enviar e-mail para o cliente ao marcar DCTF-WEB
-       </label>
-       <p-toggleButton onLabel="Enviar email" offLabel="Não enviar email" onIcon="pi pi-check" offIcon="pi pi-times" [style]="{'width': '10em'}"></p-toggleButton>
-      </div>
-
-      <div class="col">
-        <label>
-          Empresa com RH Externo
-       </label>
-       <br>
-       <p-toggleButton  onLabel="Sim" offLabel="Não" onIcon="pi pi-check" offIcon="pi pi-times" [style]="{'width': '10em'}"></p-toggleButton>
-      </div>
+    <div style="margin-top: 10px;" *ngIf="incluir == true"  class="container">
+      <label>Escreva o email</label>
+      <div class="p-inputgroup">   
+        <input type="text" pInputText placeholder="Vote">   
+        <button (click)="saveEmail()" type="button" pButton pRipple icon="pi pi-save" styleClass="p-button-success"></button> 
     </div>
-   </form>
-  
+  </div>
+    
+    <div style="margin-top: 10px;"  *ngIf="incluir == false"  class="container">
+      <div class="text-right">
+        <button style="margin: 10px;" type="button" (click)="incluir = !incluir" pButton label="Incluir Contato" ></button>
+      </div>
+      <p-table [value]="payloadModalEmailEpresas" responsiveLayout="scroll">
+        <ng-template pTemplate="header">
+            <tr>
+                <th>#</th>
+                <th>Empresa</th>
+                <th>Email</th>
+                <th>Ações</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-product>
+            <tr>
+                <td>{{product.id_empresa_email}}</td>
+                <td>{{product.nome_emp}}</td>
+                <td>{{product.emails}}</td>
+                <td>{{product.emails}}</td>
+            </tr>
+        </ng-template>
+    </p-table>
+    </div>
+   
   <ng-template pTemplate="footer">
-    <p-button icon="pi pi-check" label="Cancelar" styleClass="p-button-text"></p-button>
-    <p-button icon="pi pi-times" [loading]="loadingProcessingStatus" (click)="updateEmpresaDctf()" label="Salvar">
-    </p-button>
+   
   </ng-template>
 </p-dialog>
 
