--- a/src/app/components/filtros-listagem-empresas/modais-empresas/filtros-listagem-empresas.component.html
+++ b/src/app/components/filtros-listagem-empresas/modais-empresas/filtros-listagem-empresas.component.html
@@ -6,7 +6,6 @@
       <i class="fa fa-eraser"></i> Limpar</button>
     </h4>
 
-
     <div class="row mx-1 mt-3">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 px-1" style="padding: 0;">
           <div class="ui-grid ui-grid-responsive ui-fluid">
@@ -28,7 +27,7 @@
             <div class="ui-grid-row">
                 <div class="ui-grid-col-12">
                   <input [(ngModel)]="filters.codigo" type="text"
-                  [ngModelOptions]="{standalone: true}"  (onClear)="onClearFields('codigo')" (change)="search"  class="form-control" placeholder="">
+                  [ngModelOptions]="{standalone: true}"  (onClear)="onClearFields('codigo')" (input)="search()" class="form-control" placeholder="">
                 </div>
             </div>
           </div>
